--- a/main.css
+++ b/main.css
@@ -63,7 +63,7 @@ h1 {
     align-items: center;
     background-color: #060606;
     display: flex;
-    height: 10%;
+    height: 15%;
     justify-content: space-between;
 }
 
@@ -94,23 +94,16 @@ h1 {
 }
 
 
-textarea {
+.editor>div {
     background-color: inherit;
     border: none;
-    color: yellow;
-    font-size: 36px;
-    padding: 0;
-
-    height: 100%;
     height: 100%;
     resize: none;
     width: 100%;
 
 }
 
-textarea:focus {
-    outline: none;
-}
+
 
 .preview_container {
     flex-grow: 3;
